--- a/public/app/components/road-trip/explore-places/explore-places.html
+++ b/public/app/components/road-trip/explore-places/explore-places.html
@@ -31,7 +31,7 @@
                     <li><a href="#" ng-click="getYelpPlacesofCities('event');">Events</a></li>
                     <!--<li><a href="#" ng-click="getYelpPlacesofCities('shopping');">Shop</a></li>-->
                     <li><a href="#" ng-click="getYelpPlacesofCities('nightlife');">Drinks</a></li>
-                    <!--<li><a href="#" ng-click="getYelpPlacesofCities('arts');">Entertainment</a></li>-->
+                    <li><a href="#" ng-click="getYelpPlacesofCities('arts');">Entertainment</a></li>
                     <li><a href="#" ng-click="getYelpPlacesofCities('active');">Outdoor</a></li>
                     <!--<li class="filter-btn"><a class="save-trip view-map" ng-click="viewMap()"><i class="fa fa-compass" aria-hidden="true"> </i> View Map </a></li>-->
                     <li class="filter-btn"><a class="save-trip" ng-click="saveTrip()"><i class="fa fa-plus-circle" aria-hidden="true"> </i> Save Trip </a></li>
