--- a/public/app/components/home-page/home-page.html
+++ b/public/app/components/home-page/home-page.html
@@ -1,8 +1,8 @@
-<nav>
+<nav ng-class="logoStyle();">
     <div class="nav-wrapper">
         <div class="left-nav" ng-click="goHome()">
             <!--<img src="images/logo.png"/>-->
-            <h1 class="logoStyle();">roadtripo<h1>
+            <h1>roadtripo<h1>
         </div>
         <div class="right-nav">
             <ul>
