--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" type="text/css" href="bower_components/slick-carousel/slick/slick-theme.css">
         <link rel="stylesheet" type="text/css" href="styles/css/ngDialog.css">
         <link rel="stylesheet" type="text/css" href="styles/css/ngDialog-theme-plain.css">
+        <link rel="stylesheet" type="text/css" href="styles/css/v-accordion.css">
         <link rel="stylesheet" type="text/css" href="styles/css/master/global.css" media="screen">
 
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&key=AIzaSyBll4kPCZuJIaBsvCv_gHCRTzk5-e-8WjM"></script>
@@ -29,6 +30,7 @@
         <script type="text/javascript" src="javascripts/angular-local-storage.js"></script>
         <script type="text/javascript" src="javascripts/angular-scroll.js"></script>
         <script type="text/javascript" src="javascripts/ngAutocomplete.js"></script>
+        <script type="text/javascript" src="javascripts/v-accordion.js"></script>
         <script type="text/javascript" src="javascripts/ngDialog.js"></script>
         <script type="text/javascript" src="javascripts/video-background.module.js"></script>
         <script type="text/javascript" src="javascripts/angular-video-bg.min.js"></script>
@@ -41,13 +43,14 @@
         <script type="text/javascript" src="app/services.js"></script>
         <script type="text/javascript" src="app/components/home-page/home-page.js"></script>
         <script type="text/javascript" src="app/components/road-trip/landing-page/landing-page.js"></script>
-        <script type="text/javascript" src="app/components/road-trip/explore-places/explore-places.js"></script>
-        <script type="text/javascript" src="app/components/road-trip/explore-cities/explore-cities.js"></script>
+        <script type="text/javascript" src="app/components/road-trip/list-places/list-places.js"></script>
         <script type="text/javascript" src="app/components/road-trip/my-trips/my-trips.js"></script>
         <script type="text/javascript" src="app/components/road-trip/trip-route/trip-route.js"></script>
         <script type="text/javascript" src="app/components/road-trip/trip-route/trip-route.js"></script>
         <script type="text/javascript" src="app/components/road-trip/state-explore/state-explore.js"></script>
-        <script type="text/javascript" src="app/components/road-trip/places-details/places-details.js"></script>
+        <script type="text/javascript" src="app/components/explore-world/explore-cities/explore-cities.js"></script>
+        <script type="text/javascript" src="app/components/explore-world/explore-places/explore-food/explore-food.js"></script>
+        <script type="text/javascript" src="app/components/explore-world/explore-places/explore-attractions/explore-attractions.js"></script>
         <script type="text/javascript" src="app/directives/pit-stop/pit-stop.js"></script>
         <script type="text/javascript" src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
     </head>
